feat: added new projects & blogs

--- a/blogs.html
+++ b/blogs.html
@@ -66,7 +66,7 @@
       <section class="blog-view">
         <div class="row">
           <div class="column">
-            <img src="./images/blogs/git.jpg" alt="" />
+            <img src="./images/blogs/git.jpg" alt="Git for Beginners" />
             <div>
               <h2>Git for Beginners</h2>
               <p>
@@ -80,9 +80,9 @@
             </div>
           </div>
           <div class="column">
-            <img src="./images/blogs/dart.jpg" alt="" />
+            <img src="./images/blogs/dart.jpg" alt="What is Dart?" />
             <div>
-              <h2>What is Dart ?</h2>
+              <h2>What is Dart?</h2>
               <p>
                 Here, is a small article on <strong>Dart</strong> and some of
                 its interesting features!
@@ -96,7 +96,10 @@
 
         <div class="row">
           <div class="column">
-            <img src="./images/blogs/jsconcepts.jpg" alt="" />
+            <img
+              src="./images/blogs/jsconcepts.jpg"
+              alt="Core Concepts of Programming through JavaScript"
+            />
             <div>
               <h2>Core Concepts of Programming through JavaScript</h2>
               <p>
@@ -112,7 +115,10 @@
             </div>
           </div>
           <div class="column">
-            <img src="./images/blogs/cliapp.jpg" alt="" />
+            <img
+              src="./images/blogs/cliapp.jpg"
+              alt="How to make a CLI Quiz App using JavaScript for Beginner"
+            />
             <div>
               <h2>How to make a CLI Quiz App using JavaScript for Beginner</h2>
               <p>
@@ -131,7 +137,10 @@
 
         <div class="row">
           <div class="column">
-            <img src="./images/blogs/ejs1.jpg" alt="" />
+            <img
+              src="./images/blogs/ejs1.jpg"
+              alt="Reviewing Eloquent Javascript #IntroChpt"
+            />
             <div>
               <h2>Reviewing Eloquent Javascript #IntroChpt</h2>
               <p>
@@ -148,7 +157,10 @@
             </div>
           </div>
           <div class="column">
-            <img src="./images/blogs/ejs2.jpg" alt="" />
+            <img
+              src="./images/blogs/ejs2.jpg"
+              alt="Reviewing Eloquent Javascript #Chpt1"
+            />
             <div>
               <h2>Reviewing Eloquent Javascript #Chpt1</h2>
               <p>
@@ -167,7 +179,10 @@
 
         <div class="row">
           <div class="column">
-            <img src="./images/blogs/ejs3.png" alt="" />
+            <img
+              src="./images/blogs/ejs3.png"
+              alt="Reviewing Eloquent Javascript #Chpt2"
+            />
             <div>
               <h2>Reviewing Eloquent Javascript #Chpt2</h2>
               <p>
@@ -183,7 +198,10 @@
             </div>
           </div>
           <div class="column">
-            <img src="./images/blogs/ejs4.jpg" alt="" />
+            <img
+              src="./images/blogs/ejs4.jpg"
+              alt="Reviewing Eloquent Javascript #Chpt3"
+            />
             <div>
               <h2>Reviewing Eloquent Javascript #Chpt3</h2>
               <p>
@@ -202,7 +220,10 @@
 
         <div class="row">
           <div class="column">
-            <img src="./images/blogs/ejs5.jpg" alt="" />
+            <img
+              src="./images/blogs/ejs5.jpg"
+              alt="Reviewing Eloquent Javascript #Chpt4"
+            />
             <div>
               <h2>Reviewing Eloquent Javascript #Chpt4</h2>
               <p>
@@ -218,7 +239,10 @@
             </div>
           </div>
           <div class="column">
-            <img src="./images/blogs/ejs6.jpg" alt="" />
+            <img
+              src="./images/blogs/ejs6.jpg"
+              alt="Reviewing Eloquent Javascript #Chpt5"
+            />
             <div>
               <h2>Reviewing Eloquent Javascript #Chpt5</h2>
               <p>
@@ -237,7 +261,10 @@
 
         <div class="row">
           <div class="column">
-            <img src="./images/blogs/typescript.jpg" alt="" />
+            <img
+              src="./images/blogs/typescript.jpg"
+              alt="Intro to Typescript for Javascript devs"
+            />
             <div>
               <h2>Intro to Typescript for Javascript devs</h2>
               <p>
@@ -248,6 +275,147 @@
                 class="links link-primary"
                 target="_blank"
                 href="https://precodes.hashnode.dev/intro-to-typescript-for-javascript-devs"
+                >Let's Read it!</a
+              >
+            </div>
+          </div>
+          <div class="column">
+            <img
+              src="./images/blogs/ts-fundamentals-1.png"
+              alt="Fundamental concepts to know as a Typescript beginner - Part 1"
+            />
+            <div>
+              <h2>
+                Fundamental concepts to know as a Typescript beginner - Part 1
+              </h2>
+              <p>
+                This is not a conventional blog on the basics of Typescript but
+                <strong>unique things you should know as a beginner</strong>.
+              </p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://precodes.hashnode.dev/fundamental-concepts-to-know-as-a-typescript-beginner-part-1"
+                >Let's Read it!</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="column">
+            <img
+              src="./images/blogs/ts-fundamentals-2.png"
+              alt="Fundamental concepts to know as a Typescript beginner - Part 2"
+            />
+            <div>
+              <h2>
+                Fundamental concepts to know as a Typescript beginner - Part 2
+              </h2>
+              <p>
+                These are the concepts I learned while doing the frontend
+                masters' typescript course which helped me understand Typescript
+                better.
+              </p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://precodes.hashnode.dev/fundamental-concepts-to-know-as-a-typescript-beginner-part-2"
+                >Let's Read it!</a
+              >
+            </div>
+          </div>
+          <div class="column">
+            <img
+              src="./images/blogs/ts-react.png"
+              alt="Intermediate Typescript with React"
+            />
+            <div>
+              <h2>Intermediate Typescript with React</h2>
+              <p>
+                These are the concepts I learned while doing the frontend
+                masters' typescript with react course which helped me understand
+                Typescript with React better.
+              </p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://precodes.hashnode.dev/intermediate-typescript-with-react"
+                >Let's Read it!</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="column">
+            <img
+              src="./images/blogs/ts-intermediate.png"
+              alt="Intermediate Typescript - Part 1"
+            />
+            <div>
+              <h2>Intermediate Typescript - Part 1</h2>
+              <p>
+                Let's delve further into some of the typescript's intermediate
+                principles.
+              </p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://precodes.hashnode.dev/intermediate-typescript-part-1"
+                >Let's Read it!</a
+              >
+            </div>
+          </div>
+          <div class="column">
+            <img
+              src="./images/blogs/git-secrets.png"
+              alt="Git Secrets: 5 advanced git commands that will level up your
+                workflow"
+            />
+            <div>
+              <h2>
+                Git Secrets: 5 advanced git commands that will level up your
+                workflow
+              </h2>
+              <p>
+                Unlock the full potential of Git with these hidden gems.
+                Underused
+                <strong>git commands that you probably haven't used</strong> yet
+                to boost your productivity.
+              </p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://precodes.hashnode.dev/git-secrets-five-advanced-git-commands"
+                >Let's Read it!</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="column">
+            <img
+              src="./images/blogs/jsdocs.png"
+              alt="JSDoc: The ultimate guide to documenting your JavaScript code"
+            />
+            <div>
+              <h2>
+                JSDoc: The ultimate guide to documenting your JavaScript code
+              </h2>
+              <p>
+                Take a deep dive into JSDoc and uncover how this powerful tool
+                can
+                <strong
+                  >transform the way you write and document your
+                  JavaScript</strong
+                >
+                code.
+              </p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://precodes.hashnode.dev/jsdoc-the-ultimate-guide-to-documenting-your-javascript-code"
                 >Let's Read it!</a
               >
             </div>
