--- a/projects.html
+++ b/projects.html
@@ -85,6 +85,59 @@
         </section>
 
         <section class="project-overlap">
+          <div class="left left-skillfulcv"></div>
+          <div class="right">
+            <div class="content">
+              <h2>Skillful CV</h2>
+              <p>
+                Reimagine your resume with <strong>Skillful CV</strong>. The
+                user-friendly editor empowers you to effortlessly create,
+                customize, and fine-tune every aspect of your resume for a
+                flawless professional presentation.
+              </p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://skillful-cv.vercel.app/"
+                >Visit</a
+              >
+              <a
+                class="links link-secondary"
+                target="_blank"
+                href="https://github.com/prerana1821/skillful-cv"
+                >Source Code</a
+              >
+            </div>
+          </div>
+        </section>
+
+        <section class="project-overlap">
+          <div class="left left-mocky"></div>
+          <div class="right">
+            <div class="content">
+              <h2>Mocky</h2>
+              <p>Get interview ready with <strong>Mocky</strong>.</p>
+              You can login in with GitHub to open slots to take or give mock
+              interview. Set a reminder for your scheduled interview and
+              take/give mock interview. Share your learnings with the community
+              and be fully prepared for your real interview.
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://mock-interviews.vercel.app/"
+                >Visit</a
+              >
+              <a
+                class="links link-secondary"
+                target="_blank"
+                href="https://github.com/prerana1821/mock-interviews"
+                >Source Code</a
+              >
+            </div>
+          </div>
+        </section>
+
+        <section class="project-overlap">
           <div class="left left-prestore"></div>
           <div class="right">
             <div class="content">
@@ -266,6 +319,28 @@
                 class="links link-secondary"
                 target="_blank"
                 href="https://github.com/prerana1821/edukit"
+                >Source Code</a
+              >
+            </div>
+          </div>
+        </section>
+
+        <section class="project-overlap">
+          <div class="left left-lift-simulation"></div>
+          <div class="right">
+            <div class="content">
+              <h2>Lift Simulation</h2>
+              <p>Web app where you can simulate lift mechanics.</p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://elevator-simulation-task.netlify.app/"
+                >Visit</a
+              >
+              <a
+                class="links link-secondary"
+                target="_blank"
+                href="https://github.com/prerana1821/Lift-Simulation"
                 >Source Code</a
               >
             </div>
