feat: added blog and hashnode link

--- a/blogs.html
+++ b/blogs.html
@@ -420,7 +420,37 @@
               >
             </div>
           </div>
+          <div class="column">
+            <img
+              src="./images/blogs/jsexecution.png"
+              alt="Demystifying JavaScript Execution: A Layman's Guide"
+            />
+            <div>
+              <h2>Demystifying JavaScript Execution: A Layman's Guide</h2>
+              <p>
+                Have you ever wondered what exactly happens when you
+                <strong>hit that "Run" button</strong> in your JavaScript
+                program?
+              </p>
+              <a
+                class="links link-primary"
+                target="_blank"
+                href="https://precodes.hashnode.dev/demystifying-javascript-execution"
+                >Let's Read it!</a
+              >
+            </div>
+          </div>
         </div>
+      </section>
+
+      <section class="section-center">
+        <h2>Read over 30+ engaging blogs! Dive in now for more.</h2>
+        <a
+          class="links link-primary"
+          target="_blank"
+          href="https://precodes.hashnode.dev/"
+          >Please visit here!</a
+        >
       </section>
     </main>
 
@@ -457,6 +487,11 @@
           <a class="links" href="https://www.instagram.com/prerana.nawar/"
             ><i class="bx bxl-instagram"></i
           ></a>
+        </li>
+        <li>
+          <a class="links logo-png" href="https://precodes.hashnode.dev/"
+            ><img src="./images/hashnode.png" alt="hashnode logo"
+          /></a>
         </li>
       </ul>
       <p>© | 2021 | preCODES | Made with 🤍 & <span>&lt;/&gt;</span></p>
