--- a/index.html
+++ b/index.html
@@ -337,6 +337,10 @@
             ><i class="bx bxl-instagram"></i
           ></a>
         </li>
+        <li>
+          <a class="links" href="https://precodes.hashnode.dev/"
+            ><img class="logo-png" src="./images/hashnode.png" alt="hashnode logo"></a>
+        </li>
       </ul>
       <p>© | 2021 | preCODES | Made with 🤍 & <span>&lt;/&gt;</span></p>
     </footer>
