--- a/projects.html
+++ b/projects.html
@@ -116,11 +116,13 @@
           <div class="right">
             <div class="content">
               <h2>Mocky</h2>
-              <p>Get interview ready with <strong>Mocky</strong>.</p>
-              You can login in with GitHub to open slots to take or give mock
-              interview. Set a reminder for your scheduled interview and
-              take/give mock interview. Share your learnings with the community
-              and be fully prepared for your real interview.
+              <p>
+                Get interview ready with <strong>Mocky</strong>. You can login
+                in with GitHub to open slots to take or give mock interview. Set
+                a reminder for your scheduled interview and take/give mock
+                interview. Share your learnings with the community and be fully
+                prepared for your real interview.
+              </p>
               <a
                 class="links link-primary"
                 target="_blank"
@@ -548,6 +550,11 @@
           <a class="links" href="https://www.instagram.com/prerana.nawar/"
             ><i class="bx bxl-instagram"></i
           ></a>
+        </li>
+        <li>
+          <a class="links logo-png" href="https://precodes.hashnode.dev/"
+            ><img src="./images/hashnode.png" alt="hashnode logo"
+          /></a>
         </li>
       </ul>
       <p>© | 2021 | preCODES | Made with 🤍 & <span>&lt;/&gt;</span></p>
