--- a/what-is-dart.html
+++ b/what-is-dart.html
@@ -269,6 +269,11 @@
             ><i class="bx bxl-instagram"></i
           ></a>
         </li>
+        <li>
+          <a class="links logo-png" href="https://precodes.hashnode.dev/"
+            ><img src="./images/hashnode.png" alt="hashnode logo"
+          /></a>
+        </li>
       </ul>
       <p>© | 2020 | preCODES | Made with 🤍 & <span>&lt;/&gt;</span></p>
     </footer>
