--- a/blogs.html
+++ b/blogs.html
@@ -489,8 +489,11 @@
           ></a>
         </li>
         <li>
-          <a class="links logo-png" href="https://precodes.hashnode.dev/"
-            ><img src="./images/hashnode.png" alt="hashnode logo"
+          <a class="links" href="https://precodes.hashnode.dev/"
+            ><img
+              class="logo-png"
+              src="./images/hashnode.png"
+              alt="hashnode logo"
           /></a>
         </li>
       </ul>
